add final data processing function in final folder

--- a/Mia/data_processing_test.ipynb
+++ b/Mia/data_processing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,28 +25,39 @@
     "\n",
     "\n",
     "\n",
-    "def data_process(test = False):\n",
+    "def data_process(test=False):\n",
     "    \n",
     "    \n",
-    "\t# Read file for train or test.\n",
-    "    if test:\n",
-    "        df_raw = pd.read_csv('test.csv',index_col=0)\n",
-    "    else:\n",
-    "        df_raw = pd.read_csv('train.csv',index_col=0)\n",
+    "    # Read file for train or test.\n",
+    "    \n",
+    "    df_raw_train = pd.read_csv('train.csv',index_col=0)\n",
+    "    df_raw_test = pd.read_csv('test.csv',index_col=0)\n",
+    "    \n",
+    "#     print(df_raw_train.shape)\n",
+    "#     print(df_raw_test.shape)\n",
     "        \n",
+    "    # Remove outliers in training set.   \n",
+    "    outlier_list_scatter = [524, 1299]\n",
+    "    outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424 ]\n",
+    "    outlier_list = outlier_list_scatter + outlier_list_hard_to_fit\n",
+    "    df_raw_train = df_raw_train.drop(outlier_list)\n",
+    "    \n",
+    "    # Store the sale price information\n",
+    "    sale_price_train = df_raw_train['SalePrice']\n",
+    "    \n",
+    "    # Merge train and test df together for later process\n",
+    "    df_processed = pd.concat([df_raw_train, df_raw_test], sort=True)\n",
+    "    \n",
     "\n",
-    "\t# Make a copy so the original dataframe will not be altered.\n",
-    "    df_processed = df_raw.copy()\n",
+    "    # Combine bathroom quanlitity \n",
+    "    df_processed['BsmtBath'] = df_processed.BsmtFullBath + df_processed.BsmtHalfBath * 0.5\n",
+    "    df_processed['Bath'] = df_processed.FullBath + df_processed.HalfBath * 0.5\n",
+    "       \n",
+    "    \n",
+    "    ## Drop multicollinear columns \n",
+    "    df_processed = df_processed.drop(['BsmtFullBath', 'BsmtHalfBath','FullBath','HalfBath'], axis=1)\n",
     "    \n",
     "    \n",
-    "\t# Remove outliers.\n",
-    "    if test is False:\n",
-    "        outlier_list_scatter = [524, 1299]\n",
-    "        outlier_list_hard_to_fit = [463, 31, 534, 1433, 739, 1159, 108, 1231, 971, 1424 ]\n",
-    "        outlier_list = outlier_list_scatter + outlier_list_hard_to_fit\n",
-    "        df_processed = df_processed.drop(outlier_list)\n",
-    "\n",
-    "\n",
     "    ## Missing values\n",
     "    \n",
     "    # 259 LotFrontage  - replace missing value with 0 \n",
@@ -90,19 +101,35 @@
     "\n",
     "    # 1 Electrical\n",
     "    df_processed = df_processed[pd.notnull(df_processed.Electrical)]\n",
-    "\n",
-    "    ## Combine columns and drop multicollinear columns \n",
     "    \n",
-    "    # combine bathroom quanlitity \n",
-    "    df_processed['BsmtBath'] = df_processed.BsmtFullBath + df_processed.BsmtHalfBath * 0.5\n",
-    "    df_processed['Bath'] = df_processed.FullBath + df_processed.HalfBath * 0.5\n",
-    "    df_processed = df_processed.drop(['BsmtFullBath', 'BsmtHalfBath','FullBath','HalfBath'], axis=1)\n",
+    "    #Missing Value only in test data \n",
+    "    \n",
+    "    # MSZoning (The general zoning classification) : 'RL' is by far the most common value. So we can fill in missing values with 'RL'\n",
+    "    df_processed['MSZoning'] = df_processed['MSZoning'].fillna(df_processed['MSZoning'].mode()[0])\n",
     "\n",
-    "    # drop TotalBsmtSF - multicollinearaty\n",
-    "    #df_processed = df_processed.drop(['TotalBsmtSF'], axis=1)\n",
+    "    # Utilities : For this categorical feature all records are \"AllPub\", except for one \"NoSeWa\" and 2 NA . Since the house with 'NoSewa' is in the training set, this feature won't help in predictive modelling. We can then safely remove it.\n",
+    "    df_processed.drop(['Utilities'], axis=1,inplace=True)\n",
     "\n",
-    "    # drop GrLivArea - multicollinearaty\n",
-    "    #df_processed = df_processed.drop(['GrLivArea'], axis=1)\n",
+    "    # Exterior1st and Exterior2nd : Again Both Exterior 1 & 2 have only one missing value. We will just substitute in the most common string\n",
+    "    df_processed['Exterior1st'] = df_processed['Exterior1st'].fillna(df_processed['Exterior1st'].mode()[0])\n",
+    "    df_processed['Exterior2nd'] = df_processed['Exterior2nd'].fillna(df_processed['Exterior2nd'].mode()[0]) \n",
+    "    \n",
+    "    # BsmtFinSF1, BsmtFinSF2, BsmtUnfSF, TotalBsmtSF, BsmtBath : missing values are likely zero for having no basement\n",
+    "    for col in ('BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF','TotalBsmtSF', 'BsmtBath'):\n",
+    "        df_processed[col] = df_processed[col].fillna(0)    \n",
+    "    \n",
+    "    #Garage Cars \n",
+    "    df_processed.GarageCars = df_processed.GarageCars.fillna(0) \n",
+    "    \n",
+    "    # SaleType : Fill in again with most frequent which is \"WD\"\n",
+    "    df_processed['SaleType'] = df_processed['SaleType'].fillna(df_processed['SaleType'].mode()[0])\n",
+    "    \n",
+    "    # KitchenQual: Only one NA value, and same as Electrical, we set 'TA' (which is the most frequent) for the missing value in KitchenQual.\n",
+    "    df_processed['KitchenQual'] = df_processed['KitchenQual'].fillna(df_processed['KitchenQual'].mode()[0])    \n",
+    "    \n",
+    "    # Functional : data description says NA means typical\n",
+    "    df_processed[\"Functional\"] = df_processed[\"Functional\"].fillna(\"Typ\")    \n",
+    "    \n",
     "\n",
     "    # drop GarageArea - higher correlation than GarageACars, results are better as well\n",
     "    df_processed = df_processed.drop(['GarageArea'], axis=1) \n",
@@ -111,10 +138,8 @@
     "    df_processed = df_processed.drop(['TotRmsAbvGrd'], axis=1) \n",
     "\n",
     "    \n",
-    "\t# Feature Transformation - take the logarithm of the features.\n",
+    "    # Feature Transformation - take the logarithm of the features.\n",
     "    #Linear_Num_Cols = ['TotalBsmtSF', '1stFlrSF', '2ndFlrSF', 'GrLivArea', 'LotArea', 'GarageArea', 'TotRmsAbvGrd', 'TotalSF', 'BsmtFinSF1']\n",
-    "    if test is False:\n",
-    "        df_processed.SalePrice = np.log(df_processed.SalePrice)\n",
     "    df_processed.GrLivArea = np.log(df_processed.GrLivArea)\n",
     "    df_processed.TotalBsmtSF = np.log(df_processed.TotalBsmtSF+1)\n",
     "#     df_processed.LotArea = np.log(df_processed.LotArea) -- performance decreases\n",
@@ -122,17 +147,19 @@
     "\n",
     "\n",
     "\n",
-    "\t# Categorical Features Processsing\n",
+    "    # Categorical Features Processsing\n",
     "\n",
-    "\t# MSSubClass processing - MSSubClass 20-90 contains only duplicate information with HouseStyle and YearBuilt.\n",
+    "    # MSSubClass processing - MSSubClass 20-90 contains only duplicate information with HouseStyle and YearBuilt.\n",
     "    df_processed['MSSubClass'] = df_processed['MSSubClass'].replace(['20','30','40','45','50','60','70','75','80','85'], '0')\n",
     "\n",
     "    # Convert numerical to categorical. \n",
-    "#     df_processed[['MSSubClass','OverallQual','OverallCond']] = df_processed[['MSSubClass','OverallQual','OverallCond']].astype(str)\n",
     "    df_processed['MSSubClass'] = df_processed['MSSubClass'].astype(str)\n",
     "\n",
     "    #Encode some categorical features as ordered numbers when there is information in the order.\n",
     "    df_processed = df_processed.replace({\"Alley\" : {\"None\":0,\"Grvl\" : 1, \"Pave\" : 2},\n",
+    "#                        \"Neighborhood\" : {\"SWISU\" : 1, \"IDOTRR\" : 2, \"OldTown\" : 3, \"BrDale\" : 4, \"Blueste\": 5,\n",
+    "#                        \"Edwards\" : 6, \"MeadowV\" : 7, \"BrkSide\" : 8, \"NWAmes\" : 9, \"NAmes\" : 10, \"NPkVill\" : 11, \"Sawyer\" : 12, \"Gilbert\": 13, \n",
+    "#                        \"SawyerW\" : 14, \"Crawfor\" : 15, \"ClearCr\" : 16, \"Mitchel\" : 17, \"NoRidge\": 18, \"Blmngtn\" : 19, \"CollgCr\" : 20, \"Timber\" : 21, \"Somerst\" : 22, \"Veenker\": 23, \"NridgHt\" : 24, \"StoneBr\": 25 },\n",
     "                       \"BsmtCond\" : {\"None\" : 0, \"Po\" : 1, \"Fa\" : 2, \"TA\" : 3, \"Gd\" : 4, \"Ex\" : 5},\n",
     "                       \"BsmtExposure\" : {\"None\" : 0,\"No\":1, \"Mn\" : 2, \"Av\": 3, \"Gd\" : 4},\n",
     "                       \"BsmtFinType1\" : {\"None\" : 0, \"Unf\" : 1, \"LwQ\": 2, \"Rec\" : 3, \"BLQ\" : 4,\n",
@@ -149,26 +176,83 @@
     "                       \"GarageQual\" : {\"None\" : 0, \"Po\" : 1, \"Fa\" : 2, \"TA\" : 3, \"Gd\" : 4, \"Ex\" : 5},\n",
     "                       \"HeatingQC\" : {\"Po\" : 1, \"Fa\" : 2, \"TA\" : 3, \"Gd\" : 4, \"Ex\" : 5},\n",
     "                       \"KitchenQual\" : {\"Po\" : 1, \"Fa\" : 2, \"TA\" : 3, \"Gd\" : 4, \"Ex\" : 5},\n",
-    "                       \"LandSlope\" : {\"Sev\" : 1, \"Mod\" : 2, \"Gtl\" : 3},\n",
-    "                       \"LotShape\" : {\"IR3\" : 1, \"IR2\" : 2, \"IR1\" : 3, \"Reg\" : 4},\n",
+    "                       \"LandSlope\" : {\"Sev\" : 3, \"Mod\" : 2, \"Gtl\" : 1},\n",
+    "                       \"LotShape\" : {\"IR3\" : 4, \"IR2\" : 3, \"IR1\" : 2, \"Reg\" : 1},\n",
     "                       \"PavedDrive\" : {\"N\" : 0, \"P\" : 1, \"Y\" : 2},\n",
     "                       \"PoolQC\" : {\"None\" : 0, \"Fa\" : 1, \"TA\" : 2, \"Gd\" : 3, \"Ex\" : 4},\n",
     "                       \"Street\" : {\"Grvl\" : 1, \"Pave\" : 2}})\n",
     "    \n",
-    "### huimin please add new feature engineering here :)\n",
     "\n",
+    "    \n",
+    "    # Year processing \n",
+    "    # Combine year sold with year build to year old\n",
+    "    df_processed['YearsOld']  = df_processed['YrSold'] - df_processed['YearBuilt']\n",
+    "    df_processed = df_processed.drop(['YearBuilt'], axis=1)\n",
     "\n",
+    "    # Combine YrSold and YearRemodAdd\n",
+    "    df_processed['YearSinceRemodel'] = df_processed['YrSold'] - df_processed['YearRemodAdd']\n",
+    "    df_processed = df_processed.drop(['YearRemodAdd'], axis=1)\n",
+    "    df_processed = df_processed.drop(['YrSold'], axis=1)\n",
+    "    \n",
+    "    # Missing rate greater than 47%, and low correlation with sale price\n",
+    "    df_processed = df_processed.drop(['FireplaceQu'], axis=1)\n",
     "\n",
+    "    # PoolQC has .99 missing value. drop will lower rmse\n",
+    "    df_processed = df_processed.drop(['PoolQC'], axis=1)\n",
+    "    \n",
+    "#     MiscVal is 0 when MiscFeature is missing. drop will lower rmse a little\n",
+    "#     df_processed = df_processed.drop(['MiscVal'], axis=1)\n",
     "    \n",
     "    #Get Dummies \n",
     "    df_processed = pd.get_dummies(df_processed, columns=df_processed.select_dtypes(include=['object']).columns, drop_first=True)\n",
     "\n",
-    "    return df_processed"
+    "    # Split train and test data sets\n",
+    "    df_processed_train = df_processed[df_processed.index <= 1460].copy()\n",
+    "    df_processed_test = df_processed[df_processed.index > 1460].copy()\n",
+    "    \n",
+    "    # take log on price\n",
+    "    sale_price_train = np.log(sale_price_train)\n",
+    "    df_processed_train['SalePrice'] = sale_price_train    \n",
+    "    \n",
+    "    if test is False:\n",
+    "        return df_processed_train\n",
+    "    if test is True:\n",
+    "        return df_processed_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_process()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 for train set: 0.946684\n",
+      "--------------------------------------------------\n",
+      "R^2 for test  set: 0.926653\n",
+      "--------------------------------------------------\n",
+      "RMSE for test  set: 0.106976\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_linear( )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,18 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 for train set: 0.951070\n",
+      "R^2 for train set: 0.951064\n",
       "--------------------------------------------------\n",
-      "R^2 for test  set: 0.931034\n",
+      "R^2 for test  set: 0.931023\n",
       "--------------------------------------------------\n",
-      "RMSE for test  set: 0.103733\n"
+      "RMSE for test  set: 0.103741\n"
      ]
     }
    ],
@@ -276,21 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ols' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-5f1d815cfc66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mols\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'The mean of the errors is %.4f'\u001b[0m \u001b[1;33m%\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'The standard deviation of the errors is %.4f'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Skewness: %f\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mskew\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Kurtosis: %f\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkurt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ols' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "error = ols.predict(X_test) - y_test\n",
     "print('The mean of the errors is %.4f' %np.mean(error))\n",
