--- a/Mia/stacking.ipynb
+++ b/Mia/stacking.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,15 @@
       "START ML 2019-11-17 14:54:20.689086\n",
       "TEST score on CV\n",
       "Kernel Ridge score: 0.1061 (0.0107)\n",
-      " 2019-11-17 14:54:42.395844\n"
+      " 2019-11-17 14:54:42.395844\n",
+      "Lasso score: 0.1057 (0.0108)\n",
+      " 2019-11-17 14:54:54.771739\n",
+      "ElasticNet score: 0.1056 (0.0107)\n",
+      " 2019-11-17 14:55:44.189411\n",
+      "SVR score: 0.1798 (0.0266)\n",
+      " 2019-11-17 14:55:55.065839\n",
+      "GradientBoosting score: 0.1083 (0.0083)\n",
+      " 2019-11-17 14:57:36.055217\n"
      ]
     }
    ],
@@ -165,9 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "START Fit\n",
+      "2019-11-17 14:57:36.079222 StackingCVRegressor\n",
+      "2019-11-17 14:59:40.680090 elasticnet\n",
+      "2019-11-17 14:59:45.579709 lasso\n",
+      "2019-11-17 14:59:46.790704 ridge\n",
+      "2019-11-17 14:59:48.950705 svr\n",
+      "2019-11-17 14:59:49.996709 GradientBoosting\n",
+      "RMSLE score on train data:\n",
+      "0.08153444781539182\n",
+      "Predict submission 2019-11-17 15:00:01.826886\n",
+      "Save submission 2019-11-17 15:00:03.554884\n"
+     ]
+    }
+   ],
    "source": [
     "print('START Fit')\n",
     "print(datetime.now(), 'StackingCVRegressor')\n",
@@ -232,9 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1459, 209)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_test.shape"
    ]
